--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,6 +9,8 @@ services:
       - NODE_ENV=development
     ports:
       - "8000:8000"
+    depends_on:
+      - db
 
   web:
     build:
@@ -21,3 +23,17 @@ services:
       - "3000:3000"
     depends_on:
       - server
+
+  db:
+    image: postgres:16
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=test_cogna
+    ports:
+      - "15432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
