--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "build": "tsc",
     "start": "tsx --env-file=.env dist/server.js",
     "dev": "tsx --env-file=.env --watch src/server.ts",
+    "migrate": "kysely migrate:up",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,12 +22,16 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.10",
+    "@types/pg": "^8.15.4",
+    "kysely-ctl": "^0.13.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "kysely": "^0.28.2",
+    "pg": "^8.16.3"
   }
 }
