--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
     "build": "tsc",
     "start": "tsx --env-file=.env dist/server.js",
     "dev": "tsx --env-file=.env --watch src/server.ts",
-    "migrate": "kysely migrate:up",
+    "migrate": "kysely migrate:latest",
+    "seed": "kysely seed run",
+    "migrate:down": "kysely migrate:down",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
