--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,6 +11,9 @@ services:
       - "8000:8000"
     depends_on:
       - db
+    volumes:
+      - ./server:/app
+      - /app/node_modules
 
   web:
     build:
@@ -23,6 +26,9 @@ services:
       - "3000:3000"
     depends_on:
       - server
+    volumes:
+      - ./web:/app
+      - /app/node_modules
 
   db:
     image: postgres:16
