--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - NODE_ENV=production
     ports:
       - "8000:8000"
+    restart: always
 
   web:
     build:
@@ -23,3 +24,4 @@ services:
       - "8080:8080"
     depends_on:
       - server
+    restart: always
