--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@biomejs/biome": "2.0.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.10",
     "@types/pg": "^8.15.4",
     "kysely-ctl": "^0.13.1",
@@ -33,6 +34,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "kysely": "^0.28.2",
     "pg": "^8.16.3"
   }
