--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,6 +5,7 @@ ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 
 WORKDIR /app
+COPY . .
 COPY package.json pnpm-lock.yaml ./
 RUN corepack enable
 
@@ -16,18 +17,17 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 COPY . .
 RUN pnpm run build
 
-FROM node:22.17-alpine AS prod
+FROM base AS prod
 WORKDIR /app
+RUN corepack enable
 ENV NODE_ENV=production
 COPY --from=prod-deps /app/node_modules /app/node_modules
 COPY --from=build /app/dist /app/dist
-COPY package.json pnpm-lock.yaml ./
 EXPOSE 8000
 CMD ["pnpm", "start"]
 
 FROM base AS dev
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
-COPY . .
 
 EXPOSE 8000
 CMD ["pnpm", "dev"]
