--- a/server/package.json
+++ b/server/package.json
@@ -3,30 +3,35 @@
   "version": "1.0.0",
   "description": "",
   "module": "./dist/server.mjs",
+  "exports": "./dist/server.mjs",
   "engines": {
     "node": ">=22.17.0"
   },
   "type": "module",
   "scripts": {
     "build": "tsc --noEmit && pkgroll",
-    "start": "node dist/server.mjs",
-    "dev": "tsx --env-file=.env --watch src/server.ts",
+    "start": "node --env-file-if-exists=.env dist/server.mjs",
+    "dev": "tsx ---env-file-if-exists=.env --watch src/server.ts",
     "migrate": "kysely migrate:latest",
     "seed": "kysely seed run",
     "migrate:down": "kysely migrate:down",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsx --test --env-file-if-exists=.env.test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
+    "@faker-js/faker": "^9.9.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.0.10",
     "@types/pg": "^8.15.4",
     "kysely-ctl": "^0.13.1",
+    "lodash": "^4.17.21",
+    "node-mocks-http": "^1.17.2",
     "pkgroll": "^2.13.1",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
