--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,8 @@
     "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\""
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
@@ -28,6 +30,7 @@
     "cypress": "^14.5.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "prettier": "3.6.2",
     "start-server-and-test": "^2.0.12",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
