chore: add e2e tests with pipeline

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,30 +1,45 @@
-version: '3.8'
-
 services:
-  backend:
+  server:
+    build:
+      context: ./server
+      target: prod
+    ports:
+      - "8000:8000"
+    depends_on:
+      - test-db
+
+  backend-test:
     build:
       context: ./server
       target: dev
     command: pnpm test
     environment:
       - NODE_ENV=test
-    ports:
-      - "8000:8000"
     depends_on:
-      - db
+      - test-db
 
-  # frontend:
-  #  build:
-  #    context: ./web
-  #  command: pnpm run cy:run
-  #  environment:
-  #    - NODE_ENV=test
-  #  ports:
-  #    - "3000:3000"
-  #  depends_on:
-  #    - backend
+  frontend:
+    build:
+      context: ./web
+      target: prod
+    ports:
+      - "3000:3000"
+    depends_on:
+      - server
 
-  db:
+  cypress:
+      image: "cypress/included:14.5.1"
+      depends_on:
+        - frontend
+        - server
+      environment:
+        - CYPRESS_baseUrl=http://frontend:3000
+        - CYPRESS_API_URL=http://server:8000
+      working_dir: /e2e
+      volumes:
+        - ./web:/e2e
+
+  test-db:
     image: postgres:16
     environment:
       - POSTGRES_USER=postgres
@@ -33,6 +48,7 @@ services:
     ports:
       - "25432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_test_data:/var/lib/postgresql/data
+
 volumes:
-  postgres_data:
+  postgres_test_data:
