--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -30,9 +30,19 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and run all tests
-        run: |
-          docker compose -f docker-compose.test.yml up --build --abort-on-container-exit
+      - name: Install web dependencies
+        run: pnpm install
+        working-directory: ./web
+
+      - name: Run TypeScript check on web
+        run: pnpm tsc --noEmit
+        working-directory: ./web
+
+      - name: Run server tests
+        run: docker compose -f docker-compose.test.yml up backend-test
+
+      - name: Run E2E tests
+        run: docker compose -f docker-compose.test.yml up cypress
 
       - name: Build and push server image
         uses: docker/build-push-action@v5
