--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and run all tests with Docker Compose
-        run: |
-          docker compose -f docker-compose.test.yml up --build --abort-on-container-exit
+      - name: Install web dependencies
+        run: pnpm install
+        working-directory: ./web
+
+      - name: Run TypeScript check on web
+        run: pnpm tsc --noEmit
+        working-directory: ./web
+
+      - name: Run server tests
+        run: docker compose -f docker-compose.test.yml up backend-test
+
+      - name: Run E2E tests
+        run: docker compose -f docker-compose.test.yml up cypress
