--- a/server/.env.test
+++ b/server/.env.test
@@ -3,5 +3,5 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=test_cogna_test
-DB_HOST=db
+DB_HOST=test-db
 SECRET_KEY=your_secret_key
