--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,16 +13,14 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Install web dependencies
-        run: pnpm install
-        working-directory: ./web
-
-      - name: Run TypeScript check on web
-        run: pnpm tsc --noEmit
-        working-directory: ./web
+      - name: Build images
+        run: docker compose -f docker-compose.test.yml build
 
       - name: Run server tests
-        run: docker compose -f docker-compose.test.yml up backend-test
+        run: docker compose -f docker-compose.test.yml up backend-test --exit-code-from backend-test
+
+      - name: Run migrations
+        run: docker compose -f docker-compose.test.yml up db-migration
 
       - name: Run E2E tests
-        run: docker compose -f docker-compose.test.yml up cypress
+        run: docker compose -f docker-compose.test.yml up cypress --exit-code-from cypress
